ingress/echo_auth_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.test.qill.in/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.test.qill.in/oauth2/start?rd=https%3A%2F%2F$host$request_uri"

spec:
  tls:
  - hosts:
    - echo1.test.qill.in
    secretName: echo-tls
  rules:
  - host: echo1.test.qill.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service: 
              name: echo1
              port: 
                number: 80
