ingress/echo_noauth_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - echo1.test.qill.in
    
    secretName: echo-tls
  rules:
  - host: echo1.test.qill.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service: 
              name: echo1
              port: 
                number: 80
